[tool.poetry]
name = "example-python-app"
version = "0.1.0"
description = "A sample Python app using Poetry"
authors = ["Jane Doe <jane@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.5"
requests = "^2.26.0"
yargs-help-output = "5.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"